--- a/index.html
+++ b/index.html
@@ -1,1 +1,30 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/od-blog-web/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/od-blog-web/logo192.png"/><link rel="manifest" href="/od-blog-web/manifest.json"/><title>React App</title><script defer="defer" src="/od-blog-web/static/js/main.b246aeda.js"></script><link href="/od-blog-web/static/css/main.4cc78f3a.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
+<!doctype html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8"/>
+        <link rel="icon" href="/od-blog-web/favicon.ico"/>
+        <meta name="viewport" content="width=device-width,initial-scale=1"/>
+        <meta name="theme-color" content="#000000"/>
+        <meta name="description" content="Web site created using create-react-app"/>
+        <link rel="apple-touch-icon" href="/od-blog-web/logo192.png"/>
+        <link rel="manifest" href="/od-blog-web/manifest.json"/>
+        <title>React App</title>
+        <script defer="defer" src="/od-blog-web/static/js/main.482ab20b.js">
+        </script>
+        <script type="text/javascript">
+            (function(l) {
+                if (l.search[1] === '/' ) {
+                var decoded = l.search.slice(1).split('&').map(function(s) { 
+                    return s.replace(/~and~/g, '&')
+                }).join('?');
+                window.history.replaceState(null, null,
+                    l.pathname.slice(0, -1) + decoded + l.hash
+                );
+                }
+            }(window.location))
+        </script>
+        <link href="/od-blog-web/static/css/main.4cc78f3a.css" rel="stylesheet">
+    </head>
+    <body>
+        <noscript>You need to enable JavaScript to run this app.</noscript>
+        <div id="root"></div></body></html>
